--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -3,4 +3,19 @@
     text-align: right;
     padding: 32px;
     border-bottom: solid 3px black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+
 }
+
+.lmj-title {
+    padding-left: 32px;
+}
+
+.lmj-logo {
+    height: 45px;
+    width: 45px;
+}
+
